# jupyterAuth

./: .gitignore  README.md  authorizer.py  pyproject.toml  requirements.txt
app/: util.py
jupyterAuth/: authorizer.py  util.py
tests/: test_authorizer.py
